--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,16 @@
     margin: 0;
     padding: 0;
 }
+
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    /* Should this be 100%? */
+    height: 100vh;
+}
+
+main {
+    /* Fills up remaining space */
+    flex: 1;
+}
