--- a/css/style.css
+++ b/css/style.css
@@ -16,3 +16,33 @@ main {
     /* Fills up remaining space */
     flex: 1;
 }
+
+/* Header */
+
+header, 
+footer {
+    background-color: #1f2937;
+}
+
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.navigation {
+    display: flex;
+    gap: 15px;
+    list-style-type: none;
+}
+
+/* placeholder */
+header a {
+    color: white;
+    text-decoration: none;
+}
+
+header img {
+    width: 50px;
+    height: 50px;
+}
