--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ body {
     justify-content: space-between;
     /* Should this be 100%? */
     height: 100vh;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 main {
