--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,11 @@ header {
     align-items: center;
 }
 
+.logo {
+    font-size: 24px;
+    color: #f9faf8;
+}
+
 .navigation {
     display: flex;
     gap: 15px;
