--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ body {
 main {
     /* Fills up remaining space */
     flex: 1;
+    padding: 20px 50px;
 }
 
 /* Header */
@@ -23,6 +24,7 @@ main {
 header, 
 footer {
     background-color: #1f2937;
+    padding: 20px 50px;
 }
 
 header {
