--- a/css/style.css
+++ b/css/style.css
@@ -54,3 +54,19 @@ header img {
     width: 50px;
     height: 50px;
 }
+
+/* Hero section */
+
+.hero-section {
+    display: flex;
+}
+
+.hero-text {
+    flex: 1;
+}
+
+.hero-section img {
+    border: 1px solid grey;
+    width: 400px;
+    height: 200px;
+}
