Change hero background to blue

--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ header img {
 
 .hero-section {
     display: flex;
-    background-color: yellow;
+    background-color: #1f2937;
 }
 
 .hero-section img {
