--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,11 @@ main {
     flex: 1;
 }
 
+section {
+    display: flex;
+    justify-content: center;
+}
+
 /* Header */
 
 header, 
@@ -57,8 +62,6 @@ header img {
 /* Hero section */
 
 .hero-section {
-    display: flex;
-    justify-content: center;
     background-color: #1f2937;
 }
 
