--- a/css/style.css
+++ b/css/style.css
@@ -70,11 +70,13 @@ h1 {
     font-size: 48px;
     font-weight: bolder;
     color: #f9faf8;
+    margin-bottom: 8px;
 }
 
 .hero-text p {
     font-size: 18px;
     color: #e5e7eb;
+    margin-bottom: 8px;
 }
 
 .hero-section img {
