--- a/css/style.css
+++ b/css/style.css
@@ -102,6 +102,9 @@ h1 {
 h2 {
     text-align:center;
     margin-bottom: 50px;
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1f2937;
 }
 
 .container {
