Remove mysterious gap between info rows

--- a/css/style.css
+++ b/css/style.css
@@ -119,17 +119,13 @@ h2 {
     display: flex;
     flex-direction: column;
     gap: 8px;
-}
-
-.info img,
-.info p {
-    width: 175px;
-    height: 175px;
+    flex-basis: 175px;
 }
 
 .info img {
     border: 3px solid #3882f6;
     border-radius: 15px;
+    height: 175px;
 }
 
 /* Quote section */
